# metamorphosis

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/pages/: about-us.rst.txt  metamorphosis.rst.txt
_sources/pages/algos/: circledraw.rst.txt  linedraw.rst.txt
cmake/: AddUninstallTarget.cmake  ClangFormat.cmake  ClangTidy.cmake  CodeCoverage.cmake  FindPythonModule.cmake  FindSphinx.cmake  InstallBasicPackageFiles.cmake  LinkTimeOptimization.cmake  SupportRPATH.cmake  UseBreathe.cmake  in-source-guard.cmake  lint.cmake  variables.cmake
docs/: Bresenham.rst  CMakeLists.txt  Doxyfile.in  about-us.rst  conf.py.in  index.rst  metamorphosis.rst  requirements.txt
docs/_static/css/: style.css
docs/algos/: circledraw.rst  ellipsedraw.rst  linedraw.rst
docs/code-reference/: Bresenham.rst  color.rst
docs/pages/: algorithms.rst  code-reference.rst  metamorphosis.rst
docs/pages/algos/: ellipsedraw.rst
docs/pages/code-reference/: figure.rst
example/: CMakeLists.txt  render.cpp
example/frames/: basic.txt  metamorphosis-1.txt  metamorphosis-2.txt  metamorphosis-3.txt
examples/: CMakeLists.txt  frame-1.txt  main.cpp
frames/: frame-2.txt  frame-3.txt
include/bresenham/: bresenham.h
include/bressenham/: bressenham.h
pages/: about-us.html  algorithms.html  code-reference.html  metamorphosis.html
pages/algos/: circledraw.html  ellipsedraw.html  linedraw.html
pages/code-reference/: color.html  figure.html
src/: CMakeLists.txt
src/bresenham/: CMakeLists.txt  bresenham.cpp  drawCircle.cpp  drawEllipse.cpp  drawLine.cpp
src/bressenham/: CMakeLists.txt  bressenham.cpp  drawCircle.cpp  drawEllipse.cpp  drawLine.cpp
